--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "iter8/ldaprecord-bundle",
+    "name": "dtisch/ldaprecord-bundle",
     "description": "LdapRecord for Symfony bundle",
     "license": "MIT",
     "type": "symfony-bundle",
